[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bearing-rul-benchmarks"
version = "0.1.0"
description = "Baseline deep learning benchmarks for rolling bearing remaining useful life prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.3",
  "matplotlib>=3.8"
]

[project.scripts]
bearing-rul-benchmarks = "bearing_rul_benchmarks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
